@@ -6,7 +6,6 @@ for 0.7
 
 - new lexers:
   * Haskell
-  * JSP
   * (Q)BASIC
   * Lisp
   * IPython sessions
@@ -14,7 +13,6 @@ for 0.7
   * LaTeX special formatting?
   * OCaml
   * Nemerle
-  * Windows batch files
   * Assembler
   * Objective C
   * MySQL/PostgreSQL/SQLite
@@ -26,7 +24,6 @@ for 0.7
   * readd property support for C# lexer? that is, find a regex that doesn't
     backtrack to death...
   * add support for function name highlighting to C++ lexer
-
 
 - automatically get help for lexers/formatters/options from docstrings
 
